added new futures

--- a/kata_frontend/tareas/src/index.css
+++ b/kata_frontend/tareas/src/index.css
@@ -126,7 +126,7 @@ body {
 }
 
 .tarea {
-  background: #f4f4f4;
+  background: #9b9b9b;
   margin: 5px;
   padding: 10px 20px;
   /* cursor: pointer; */
